foundation-objs/main/default/objects/Quote/fields/Add_On_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Add_On_Approval_Status__c</fullName>
    <label>Add On Approval Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>