foundation-objs/main/default/objects/Quote/fields/Approval_sub_status__c.field-meta.xml
<CustomField>
    <fullName>Approval_sub_status__c</fullName>
    <label>Approval sub status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Discount Approval in progress</fullName>
            </value>
            <value>
                <fullName>Discount Approved</fullName>
            </value>
            <value>
                <fullName>Discount Rejected</fullName>
            </value>
            <value>
                <fullName>MS Approval in progress</fullName>
            </value>
            <value>
                <fullName>MS Approval done</fullName>
            </value>
            <value>
                <fullName>MS Approval Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>