foundation-objs/main/default/objects/Quote/fields/Customer_Opted_For_Integration__c.field-meta.xml
<CustomField>
    <fullName>Customer_Opted_For_Integration__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Customer Opted For Integration</label>
    <type>Checkbox</type>
</CustomField>