foundation-objs/main/default/objects/Quote/fields/ERP_Name__c.field-meta.xml
<CustomField>
    <fullName>ERP_Name__c</fullName>
    <label>ERP name, if others</label>
    <length>255</length>
    <type>Text</type>
</CustomField>