foundation-objs/main/default/objects/Quote/fields/Estimated_Delivery_Cost__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Delivery_Cost__c</fullName>
    <label>Estimated Delivery Cost</label>
    <length>255</length>
    <type>Text</type>
</CustomField>