foundation-objs/main/default/objects/Quote/fields/Features_not_in_Use__c.field-meta.xml
<CustomField>
    <fullName>Features_not_in_Use__c</fullName>
    <label>Features not in Use</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>