foundation-objs/main/default/objects/Quote/fields/Incumbent__c.field-meta.xml
<CustomField>
    <fullName>Incumbent__c</fullName>
    <label>How much Incumbent is paying</label>
    <length>255</length>
    <type>Text</type>
</CustomField>