foundation-objs/main/default/objects/Quote/fields/Incumbent_Name__c.field-meta.xml
<CustomField>
    <fullName>Incumbent_Name__c</fullName>
    <inlineHelpText>To specify name, if others selected under Existing Vendor/Incumbent</inlineHelpText>
    <label>Existing vendor/ Incumbent name if marke</label>
    <length>255</length>
    <type>Text</type>
</CustomField>