foundation-objs/main/default/objects/Quote/fields/Latest_Quote__c.field-meta.xml
<CustomField>
    <fullName>Latest_Quote__c</fullName>
    <formula>IF(NOT( ISBLANK(Opportunity.SyncedQuote.Quote_ID_18__c)),
IF(Opportunity.SyncedQuote.Quote_ID_18__c = Quote_ID_18__c, &apos;Yes&apos;, &apos;No&apos;),
Latest_Quote_CD__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Latest Quote</label>
    <type>Text</type>
</CustomField>