foundation-objs/main/default/objects/Quote/fields/Latest_Quote_CD__c.field-meta.xml
<CustomField>
    <fullName>Latest_Quote_CD__c</fullName>
    <formula>IF(Opportunity.Latest_Quote_Based_on_Date__c = CreatedDate, &apos;Yes&apos;, &apos;No&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Latest Quote CD</label>
    <type>Text</type>
</CustomField>