foundation-objs/main/default/objects/Quote/fields/Max_Discount_Prod_Category__c.field-meta.xml
<CustomField>
    <fullName>Max_Discount_Prod_Category__c</fullName>
    <label>Max Discount Prod Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>