foundation-objs/main/default/objects/Quote/fields/Monthly_throughput_Slab_2_Cr__c.field-meta.xml
<CustomField>
    <fullName>Monthly_throughput_Slab_2_Cr__c</fullName>
    <label>Monthly throughput Slab 2 (Cr)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>