foundation-objs/main/default/objects/Quote/fields/Name_of_Competitor__c.field-meta.xml
<CustomField>
    <fullName>Name_of_Competitor__c</fullName>
    <label>Name of Competitor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>