foundation-objs/main/default/objects/Quote/fields/Next_Pitch_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Pitch_Date__c</fullName>
    <label>Next Pitch Date</label>
    <type>Date</type>
</CustomField>