foundation-objs/main/default/objects/Quote/fields/Old_Anchor_Price__c.field-meta.xml
<CustomField>
    <fullName>Old_Anchor_Price__c</fullName>
    <label>Old / Anchor Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>