foundation-objs/main/default/objects/Quote/fields/Opportunity_Owner_User_Category__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Owner_User_Category__c</fullName>
    <formula>TEXT(Opportunity.Owner.User_Category__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Owner User Category</label>
    <type>Text</type>
</CustomField>