foundation-objs/main/default/objects/Quote/fields/Price_Offered_to_Match_Competitor__c.field-meta.xml
<CustomField>
    <fullName>Price_Offered_to_Match_Competitor__c</fullName>
    <label>Price Offered to Match Competitor</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>