foundation-objs/main/default/objects/Quote/fields/Products_Can_Be_Cross_Sold_In_Future__c.field-meta.xml
<CustomField>
    <fullName>Products_Can_Be_Cross_Sold_In_Future__c</fullName>
    <label>Products Can Be Cross Sold In Future</label>
    <length>255</length>
    <type>Text</type>
</CustomField>