foundation-objs/main/default/objects/Quote/fields/Projected_Customer_Lifetime_Value__c.field-meta.xml
<CustomField>
    <fullName>Projected_Customer_Lifetime_Value__c</fullName>
    <label>Projected Customer Lifetime Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>