foundation-objs/main/default/objects/Quote/fields/Reason_for_Discount_Rejection__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Discount_Rejection__c</fullName>
    <label>Reason for Discount Rejection</label>
    <type>TextArea</type>
</CustomField>