foundation-objs/main/default/objects/Quote/fields/Reason_for_Discount_Request__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Discount_Request__c</fullName>
    <label>Reason for Discount Request</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Opportunity_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>test</fullName>
            </value>
            <value>
                <fullName>Competitor / Incumbent are offering lesser quote price</fullName>
            </value>
            <value>
                <fullName>Budget conscious customer</fullName>
            </value>
            <value>
                <fullName>Cross Sell / Upsell Potential</fullName>
            </value>
            <value>
                <fullName>Customer paying the incumbent very less</fullName>
            </value>
            <value>
                <fullName>Foot in the Door for a large brand</fullName>
            </value>
            <value>
                <fullName>Customer not satisfied with cleartax support</fullName>
            </value>
            <value>
                <fullName>Customer not using the product (or has very limited use)</fullName>
            </value>
            <value>
                <fullName>Renewal floor price is very steep and is not consistent with usage data</fullName>
            </value>
            <value>
                <fullName>Covid related slow-down at customer</fullName>
            </value>
            <value>
                <fullName>Any other</fullName>
            </value>
            <value>
                <fullName>Low Price Anchor (CT) - Sister Company / CA Product / Old Quote</fullName>
            </value>
            <value>
                <fullName>Partial product use</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>