foundation-objs/main/default/objects/Quote/fields/Reason_For_Not_Opting_For_Integration__c.field-meta.xml
<CustomField>
    <fullName>Reason_For_Not_Opting_For_Integration__c</fullName>
    <label>Reason For Not Opting For Integration</label>
    <length>255</length>
    <type>Text</type>
</CustomField>