foundation-objs/main/default/objects/Quote/fields/Super_Manager_Name__c.field-meta.xml
<CustomField>
    <fullName>Super_Manager_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Super Manager Name</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>