foundation-objs/main/default/objects/Quote/fields/Total_Integration_SLA__c.field-meta.xml
<CustomField>
    <fullName>Total_Integration_SLA__c</fullName>
    <formula>Standard_Integration_SLA__c  +  Total_Add_On_SLA__c[disable]</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Integration SLA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>