foundation-objs/main/default/objects/Quote/fields/Transaction_Fee_Slab_3__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Fee_Slab_3__c</fullName>
    <label>Transaction Fee % (Slab 3)</label>
    <precision>15</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>