foundation-objs/main/default/objects/Quote/validationRules/Syncing_the_quote_only_at_Quote_Accept.validationRule-meta.xml
<ValidationRule>
    <fullName>Syncing_the_quote_only_at_Quote_Accept</fullName>
    <active>true</active>
    <errorConditionFormula>IsSyncing &amp;&amp; Text(Status) != &apos;Quote Accept&apos;</errorConditionFormula>
    <errorMessage>You can only sync quote at Quote Accept</errorMessage>
</ValidationRule>